[package]
name = "hiccup_pet"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
dotenv = "0.15.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "standard_framework",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
version = "0.11"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
